--- a/app/src/main/res/layout/activity_additional_action_upload.xml
+++ b/app/src/main/res/layout/activity_additional_action_upload.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/_21sdp"
+    android:layout_marginRight="@dimen/_21sdp"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".view.IdVeAdditionalActionActivity">
@@ -22,7 +24,6 @@
                 android:id="@+id/ssnCloseLL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_45sdp">
 
                 <ImageView
@@ -53,100 +54,95 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_16sdp"
-                android:layout_marginRight="@dimen/_21sdp"
                 android:fontFamily="@font/opensans_regular"
-                android:text="@string/add_actioncontent"
+                android:text="Thank you for your interest in coyni. After reviewing your account. The coyni team requires you to upload the following documentation
+within 30 days to continue account verification."
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_44sdp">
+                android:layout_marginTop="@dimen/_20sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text=""
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
 
-                <LinearLayout
-                    android:id="@+id/hintdHolderLL"
+
+            <LinearLayout
+                android:id="@+id/clickBottomSheet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_19sdp"
+                android:background="@drawable/card_background"
+                android:orientation="horizontal">
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_13sdp"
+                    android:layout_marginBottom="@dimen/_13sdp"
+                    android:backgroundTint="@color/white"
+                    android:src="@drawable/ic_upload_id" />
+
+
+                <TextView
+                    android:id="@+id/idveriUpIdTxt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_21sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginEnd="@dimen/_21sdp"
-                    android:background="@drawable/outline_box_unfocused"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_11sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:lineSpacingExtra="5dp"
+                    android:text="@string/contentuploadid"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp"
+                    android:visibility="visible" />
 
-                    android:gravity="center"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                <LinearLayout
+                    android:id="@+id/fileSelectedLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
 
-
-                    <com.santalu.maskara.widget.MaskEditText
-                        android:id="@+id/ssnET"
+                    <TextView
+                        android:id="@+id/idveriUpIdSuccessTxt"
                         android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:layout_gravity="center"
-                        android:background="@android:color/transparent"
-                        android:digits="1234567890"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:hint="•••-••-••••"
-                        android:inputType="numberPassword"
-                        android:maxLines="1"
-                        android:padding="14dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_17sdp"
+                        android:layout_marginTop="@dimen/_20sdp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="@dimen/_18sdp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/opensans_regular"
+                        android:lineSpacingExtra="@dimen/_6sdp"
                         android:singleLine="true"
-                        android:textColor="@color/primary_black"
-                        android:textColorHint="@color/light_gray"
-                        android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="@dimen/_12ssp"
-                        app:mask="___-__-____" />
+                        android:text="@string/contentuploadidsuccess"
+                        android:textColor="@color/primary_color"
+                        android:textSize="@dimen/_11ssp"
+                        android:visibility="visible" />
+
+                    <ImageView
+                        android:id="@+id/idveriUpIdSuccessImg"
+                        android:layout_width="@dimen/_15sdp"
+                        android:layout_height="@dimen/_15sdp"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="@dimen/_15sdp"
+                        android:src="@drawable/ic_complete"
+                        android:visibility="visible" />
 
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/hintTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@android:color/white"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:paddingStart="4dp"
-                    android:paddingEnd="4dp"
-                    android:text="SSN"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"
-                    app:layout_constraintStart_toStartOf="@+id/hintdHolderLL"
-                    app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <LinearLayout
-                android:id="@+id/ssnErrorLL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="visible"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp">
-
-                <ImageView
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
-                    android:src="@drawable/ic_erro" />
-
-                <TextView
-                    android:id="@+id/ssnErrorTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/error_red"
-                    android:textSize="@dimen/_10ssp" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
