--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -136,7 +136,6 @@
                             </LinearLayout>
 
 
-
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/profilePicCL"
                                 android:layout_width="wrap_content"
@@ -245,8 +244,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_15sdp"
-                            android:orientation="vertical"
-                            android:layout_weight="1">
+                            android:layout_weight="1"
+                            android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
