--- a/app/src/main/res/drawable/txn_status_corner_radius.xml
+++ b/app/src/main/res/drawable/txn_status_corner_radius.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:centerColor="@color/white" android:startColor="@color/white" android:endColor="@color/white" />
+    <gradient android:centerColor="#E8F3F9" android:startColor="#E8F3F9" android:endColor="#E8F3F9" />
     <corners android:bottomLeftRadius="@dimen/_6sdp"
         android:bottomRightRadius="@dimen/_6sdp"
         android:topLeftRadius="@dimen/_6sdp"
