--- a/app/src/main/res/layout/pending_posted_listitem.xml
+++ b/app/src/main/res/layout/pending_posted_listitem.xml
@@ -27,7 +27,7 @@
 
             <TextView
                 android:id="@+id/messageTV"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
                 android:fontFamily="@font/opensans_semibold"
@@ -47,16 +47,16 @@
                 android:textSize="@dimen/_12ssp" />
 
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/statusCVbg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/messageTV"
-                android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                app:cardBackgroundColor="#FFEFD8"
-                android:layout_marginBottom="@dimen/_1sdp"
-                app:cardCornerRadius="@dimen/_6sdp">
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:id="@+id/statusCVbg"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_below="@+id/messageTV"-->
+<!--                android:layout_marginStart="@dimen/_11sdp"-->
+<!--                android:layout_marginTop="@dimen/_8sdp"-->
+<!--                app:cardBackgroundColor="#FFEFD8"-->
+<!--                android:layout_marginBottom="@dimen/_1sdp"-->
+<!--                app:cardCornerRadius="@dimen/_6sdp">-->
 
                 <TextView
                     android:id="@+id/statusTV"
@@ -64,6 +64,9 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_bold"
                     android:paddingStart="@dimen/_20sdp"
+                    android:layout_below="@id/messageTV"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginStart="@dimen/_11sdp"
                     android:paddingTop="@dimen/_2sdp"
                     android:paddingEnd="@dimen/_20sdp"
                     android:paddingBottom="@dimen/_2sdp"
@@ -71,7 +74,7 @@
                     android:textColor="#FFA701"
                     android:textSize="@dimen/_7ssp" />
 
-            </androidx.cardview.widget.CardView>
+<!--            </androidx.cardview.widget.CardView>-->
 
             <TextView
                 android:id="@+id/balTXT"
@@ -98,8 +101,8 @@
                 android:textSize="@dimen/_10ssp" />
 
         </RelativeLayout>
-
     <View
+        android:id="@+id/viewV"
         android:layout_below="@id/balanceTV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
@@ -107,4 +110,5 @@
         android:layout_marginEnd="@dimen/_11sdp"
         android:background="#D8E2F0"
         />
+
 </LinearLayout>
