--- a/app/src/main/res/layout/preauthorization.xml
+++ b/app/src/main/res/layout/preauthorization.xml
@@ -81,10 +81,11 @@
                         android:id="@+id/etAmount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="0123456789"
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="0.00"
                         android:imeOptions="actionDone"
-                        android:inputType="number|textNoSuggestions"
+                        android:inputType="number"
                         android:maxLength="7"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
