--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -55,6 +55,7 @@
                 android:src="@drawable/ic_addpayment_method" />
 
             <TextView
+                android:id="@+id/tvMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
