--- a/app/src/main/res/layout/card_number_layout.xml
+++ b/app/src/main/res/layout/card_number_layout.xml
@@ -48,10 +48,11 @@
             android:fontFamily="@font/opensans_semibold"
             android:hint="XXXX XXXX XXXX XXXX"
             android:imeOptions="actionNext"
-            android:inputType="number|textNoSuggestions"
+            android:inputType="number"
             android:maxLength="19"
             android:maxLines="1"
             android:padding="14dp"
+            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
             android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
