--- a/app/src/main/res/layout/selectpaymentmethod.xml
+++ b/app/src/main/res/layout/selectpaymentmethod.xml
@@ -14,7 +14,7 @@
         android:paddingLeft="@dimen/_22sdp">
 
         <LinearLayout
-            android:id="@+id/lyPayBack"
+            android:id="@+id/lySelBack"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="@dimen/_40sdp"
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/ic_close" />
         </LinearLayout>
 
         <TextView
@@ -34,33 +34,41 @@
             android:layout_marginBottom="@dimen/_11sdp"
             android:fontFamily="@font/opensans_bold"
             android:gravity="left"
-            android:text="Payment Methods"
+            android:text="Select Payment Method"
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp" />
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/_11sdp"
-        android:paddingTop="@dimen/_12sdp"
-        android:paddingRight="@dimen/_11sdp"
-        android:paddingBottom="@dimen/_20sdp">
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="@dimen/_10sdp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cvAddPayment"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_48sdp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="4dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/_10sdp"
+            android:paddingTop="@dimen/_10sdp"
+            android:paddingRight="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_20sdp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvSelPayMethods"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/_10sdp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -76,14 +84,15 @@
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"></TextView>
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvPaymentMethods"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_11sdp">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@color/viewcolor"></View>
 
-        </androidx.recyclerview.widget.RecyclerView>
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
 </LinearLayout>
