--- a/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
+++ b/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
@@ -18,28 +18,59 @@
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_toRightOf="@+id/imgPayMethod"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvPayHead"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:singleLine="true"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="Bank of America"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp"></TextView>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvNumber"
+            <TextView
+                android:id="@+id/tvPayHead"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_semibold"
+                android:singleLine="true"
+                android:text="Bank of America"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp"></TextView>
+
+            <TextView
+                android:id="@+id/tvNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="••••5359"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layoutError"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="••••5359"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp"></TextView>
+            android:layout_marginTop="@dimen/_3sdp"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="@dimen/_12sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:src="@drawable/ic_erro" />
+
+            <TextView
+                android:id="@+id/tvError"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="There’s a issue with your payment"
+                android:textColor="@color/error_red"
+                android:textSize="@dimen/_9sdp"></TextView>
+
+        </LinearLayout>
     </LinearLayout>
 
     <View
